# icarust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  server-architecture.md
crates/client/: Cargo.toml
crates/client/src/: input.rs  lib.rs  main.rs  menu.rs  widget.rs
crates/client/src/net/: mod.rs  native.rs  web.rs
crates/client/src/render/: camera.rs  entities.rs  explosion.rs  instance_batch.rs  mod.rs  particles.rs  sky.rs  terrain.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/tests/: handshake.rs
crates/sim/: Cargo.toml
crates/sim/src/: enemy.rs  entity.rs  event.rs  input.rs  lib.rs  physics.rs  player.rs  tank.rs  terrain.rs  util.rs  wave.rs  world.rs
src/: assets.rs  input.rs  main.rs  physics.rs  util.rs  widget.rs  widgets.rs
src/actors/: env_object.rs  mod.rs  player.rs  rock.rs  shot.rs
src/render/: camera.rs
web/: build.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-bullet-behavior.mjs  test-headless-drive.mjs  test-headless-mem.mjs  test-headless-scenes.mjs  test-headless.mjs  test-heap-diff.mjs  test-level-progression.mjs  test-menu-flow.mjs  test-no-shoot.mjs  vite.config.js
web/src/: runner.js  zip.js
