[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "icarust-client"
path = "src/main.rs"

[dependencies]
ggez = { workspace = true }
sim = { workspace = true }
protocol = { workspace = true }
glam = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
