[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "icarust-server"
path = "src/main.rs"

[dependencies]
sim = { workspace = true }
protocol = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
